core/src/ast/snapshots/span_testing/diplomat_core__ast__logging__tests__flush@generic_type.rs_ugly.snap
---
source: core/src/ast/logging.rs
expression: self.buf
---
Diplomat error: Generic type arguments are unsupported
In src/ast/snapshots/span_testing/generic_type.rs:3:10:
...impl Test<T> {...
        ^^^^^^^
Type paths with generic arguments are unsupported.
